--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 
   <!-- Legacy Polyfills -->
-  <script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script nomodule="" src="https://static.parastorage.com/unpkg/core-js-bundle@3.2.1/minified.js"></script>
+  <script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script src="https://browser.sentry-cdn.com/6.18.2/bundle.min.js"></script><script nomodule="" src="https://static.parastorage.com/unpkg/core-js-bundle@3.2.1/minified.js"></script>
   <script nomodule="" src="https://static.parastorage.com/unpkg/focus-within-polyfill@5.0.9/dist/focus-within-polyfill.js"></script>
   <script nomodule="" src="https://polyfill.io/v3/polyfill.min.js?features=fetch"></script>
 
@@ -233,7 +233,7 @@ window.componentsRegistry.runtimeReady = new Promise((resolve) => { window.compo
   
   
   
-  <meta property="og:image" content="https://static.wixstatic.com/media/f3cc84_ea75f8d1f99448809bfcc1094351ba33%7Emv2.jpg/v1/fit/w_2500,h_1330,al_c/f3cc84_ea75f8d1f99448809bfcc1094351ba33%7Emv2.jpg">
+  <meta property="og:image" content="https://imgur.com/a/rusNH6c">
   <meta property="og:image:width" content="2500">
   <meta property="og:image:height" content="1330">
   
@@ -1097,6 +1097,7 @@ unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+
 <!-- warmup data start -->
 <script type="application/json" id="wix-warmup-data">{"platform":{"ssrPropsUpdates":[],"ssrStyleUpdates":[]},"appsWarmupData":{},"ooi":{"failedInSsr":{}}}</script>
 <!-- warmup data end -->
+
 
 
 
