--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ window.componentsRegistry.runtimeReady = new Promise((resolve) => { window.compo
   
   
   
-  <meta property="og:image" content="https://imgur.com/a/rusNH6c">
+  <meta property="og:image" content="https://i.imgur.com/fgdfpiB.jpg">
   <meta property="og:image:width" content="2500">
   <meta property="og:image:height" content="1330">
   
