--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en"><head>
-	<title> kochamcyce.pl</title>
+	<title> michalak.pl</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
