--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<span style="font-family:kelly slab,fantasy;">kokoszanelinio https://garticphone.com/pl/?c=03d0449ee6 </span><html lang="en"><head>
+<span style="font-family:kelly slab,fantasy;">kokoszanelinio</span><html lang="en"><head>
 	<title> kochamcyce.pl</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport">
