--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+</head>
 <span style="font-family:kelly slab,fantasy;">kokoszanelinio</span><html lang="en"><head>
 	<title> kochamcyce.pl</title>
   <meta charset="utf-8">
